Alignment and size fixed

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 
 .container{
-	width: 800px;
+	width: 900px;
 	margin: 0 auto;
 }
 header {
@@ -83,7 +83,7 @@ nav {
 	margin: 0 0;
 	padding: 0 0;
 	display: inline-table;
-	width: 60%
+	width: 65%
 }
 nav a{
 	text-decoration: none;
@@ -94,7 +94,7 @@ nav a{
 }
 .logo{
 	display: inline-block;
-	margin-left: 16%; 
+	margin-left: 8%; 
 	margin-right:0;
 }
 #top-section{
